# derivkit-demos

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  adaptive_demo_plot.py  dali_demo.py  demo.py  demo_options.py  environment.yaml  fit_quality_demo.py  forecast_demo.py  issues-derivkit-examples.md  pyproject.toml  requirements.txt  run_demo.py  utils.py
benchmarks/: README.md
benchmarks/diagnostics/: diag_mc_posterior.py
benchmarks/sensitivity/: sens_error_vs_stepsize.py  sens_mse_vs_noise.py  sens_stability_vs_spacing.py
common/: file.py  formatters.py  monte_carlo.py  noise.py  style.py  utils.py
demo-notebooks/: 01-derivative-kit-simple.ipynb  02-derivative-kit-advanced.ipynb  03-calculus-kit-simple.ipynb  04-calculus-kit-advanced.ipynb  05-forecast-kit-fisher.ipynb  05-forecasting-kit-fisher.ipynb  06-forecast-kit-fisher-bias.ipynb  07-forecast-kit-dali.ipynb  08-derivative-kit-tabulated_simple.ipynb  09-derivative-kit-tabulated_advanced.ipynb  10-derivkit-ccl-demo.ipynb
demo-scripts/: 01-derivative-kit-simple.py  02-derivative-kit-advanced.py  03-calculus-kit-simple.py  04-calculus-kit-advanced.py  05-forecast-kit-fisher.py  05-forecasting-kit-fisher.py  06-forecast-kit-fisher-bias.py  07-forecast-kit-dali.py  08-derivative-kit-tabulated-simple.py  08-derivative-kit-tabulated.py  09-derivative-kit-tabulated_advanced.py  10_cluster_counts.py  11_run_cluster_sweep_overlay.py  __init__.py
demos/: README.md
demos/adaptive/: adap_common.py  (+6 more)
derivkit_examples.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
notebooks/: 01_example_derivatives.ipynb  02_example_dali.ipynb  03_simple_demo_derivatives.ipynb  04_simple_demo_dali.ipynb  05_standard_fn_demo.ipynb  06_blowup_fn_demo.ipynb  07_tangent_residual_analysis.ipynb  08_adaptive_timing_sweep.ipynb  calculus-kit-advanced.ipynb  calculus-kit-simple.ipynb  derivative-kit-advanced.ipynb  derivative-kit-simple.ipynb  derivative-kit-tabulated_advanced.ipynb  derivative-kit-tabulated_simple.ipynb  derivkit-ccl-demo-cosmic-shear.ipynb  forecast-kit-cosmic-shear-ccl.ipynb  forecast-kit-dali-1d.ipynb  forecast-kit-fisher-bias.ipynb  functions_dict.py
playground/: nonlinear_derivatives.py
scripts/: calculus-kit-advanced.py  calculus-kit-simple.py  derivative-kit-advanced.py  derivative-kit-simple.py  derivative-kit-tabulated-advanced.py  derivative-kit-tabulated-simple.py  derivkit-cluster-counts-forecast.py  derivkit-cluster-counts-sweep.py  forecast-kit-cluster-counts-forecast.py  forecast-kit-cluster-counts-sweep.py  forecast-kit-cosmic-shear-ccl.py  forecast-kit-dali-1d.py  forecast-kit-dali-2d.py  forecast-kit-fisher-bias.py  forecast-kit-fisher.py  plot_helpers.py  plot_kit.py
templates/: template-notebook.ipynb  template-script.py
utils/: style.py
(+5 files in other folders)
