[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "derivkit-demos"
version = "0.0.1"
dependencies = [
  "derivkit",          # use the package you're demonstrating
  "numpy",
  "scipy",
]
authors = [
  { name="Nikolina Šarčević", email="nikolina.sarcevic@gmail.com" },
  { name="Matthijs van der Wild", email="matthijs@vanderwild.com" },
  { name="Cynthia Trendafilova", email="cyntrendafilova@gmail.com" },
  { name="Bastien Carreres", email="bastien.carreres@duke.edu" },
]
description = "Demo scripts and notebooks for DerivKit"
readme = "README.md"
requires-python = ">3.9"
classifiers = [
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Physics",
]
license = "MIT"
license-files = ["LICENSE*"]

[project.optional-dependencies]
"test" = [
    "pytest",
]
"docs" = [
    "sphinx",
    "furo",
]
"lint" = [
    "ruff",
]

[tool.pytest.ini_options]
# Demos repo: tests (if any) live under ./tests and import code from repo root
testpaths = ["tests"]
pythonpath = [
  ".",
]
markers = [
  "slow: marks tests as slow (deselect with '-m \"not slow\"')"
]

[tool.ruff]
line-length = 79

[tool.ruff.lint]
# Match DerivKit’s rule-set (plus PLC0415 per your config)
select = ["E", "F", "W", "Q", "I", "D", "PLC0415"]
ignore = ["E203", "E501"]

[tool.ruff.lint.isort]
known-first-party = ["derivkit", "derivkit_demos"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.tox]
requires = ["tox>=4.22"]
labels = { test = ["py310", "py311", "py312", "py313"] }
envlist = [
  "lint",
  # enable these if you add tests or docs:
  # "py310",
  # "py311",
  # "py312",
  # "py313",
  # "docs",
]

[tool.tox.env_run_base]
change_dir = "{tox_root}"
description = "Run tests under {base_python}"
extras = ["test"]
allowlist_externals = ["pytest"]
commands = [
    ["pytest"],
]

[tool.tox.env_run_base.setenv]
PIP_CACHE_DIR = "{tox_root}/.cache/pip"

[tool.tox.env.docs]
description = "Build the HTML files using Sphinx"
extras = ["docs"]
commands = [
  # Generate simple API docs from the demos folder (adjust paths as you like)
  [
    "sphinx-apidoc",
    "-o", "{tox_root}/docs",
    "{tox_root}/demo-scripts",
    "--separate",
    "-f",
  ],
  [
    "sphinx-build",
    "{tox_root}/docs",
    "{tox_root}/docs/_build/html",
    "--fail-on-warning",
  ],
]

[tool.tox.env.lint]
description = "Lint repo using Ruff"
extras = ["lint"]
commands = [
  [
    "ruff",
    "check",
    "--fix",
    {replace = "posargs", extend = true},
  ],
]
